--- a/app/src/main/res/layout/activity_pet_list.xml
+++ b/app/src/main/res/layout/activity_pet_list.xml
@@ -20,7 +20,7 @@
     <ImageView
         android:layout_height="150dp"
         app:srcCompat="@drawable/none"
-        android:id="@+id/imageView"
+        android:id="@+id/petImageView"
         android:layout_width="150dp"
         android:scaleType="fitCenter"
         android:contentDescription="@string/photo"
